# HPE-LLM4Climate

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  LICENSE  PrithviWxC_inference.py  README.md  aifs_encoder_analysis.ipynb  architecture_documentation.md  conftest.py  create_architecture_diagram.py  create_attention_detail.py  example_aifs_encoder_usage.py  infer.sbatch  pr_description.md  pyproject.toml  requirements.txt  start_train.sh  test_advanced_integration.py  test_aifs_encoder_utils.py  test_llama_integration.py  test_llama_with_prithvi.py  test_minimal.py  test_mps_fix.py  test_quiet.py  working_location_demo.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: config.yaml
dataset/: README.md  data_loader.py  merra2_dataset_processor.py
dataset/examples/: basic_usage.py  batch_processing.py  integration_test.py
docs/: CHANGES_transformer_default.md  CODE_QUALITY.md  PRE_COMMIT_HOOK.md  README.md  aifs_5d_time_series_analysis.md  aifs_integration.md  aifs_timeseries_integration_summary.md  architecture_documentation.md  create_architecture_diagram.py  create_attention_detail.py  spatial_comparative_analysis_requirements.md
hpe_llm4climate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mock_checkpoints/: training_history.json
multimodal/: README.md  REAL_WEIGHTS_SUCCESS.md  REAL_WEIGHTS_SUCCESS_FINAL.md  __init__.py  climate_text_fusion.py  corrected_encoder.py  create_fixed_encoder.py  encoder_extractor.py  example_usage.py  final_location_aware_fusion_old.py  fix_encoder_extraction.py  fusion_demo.py  location_aware.py  location_aware_example.py  location_aware_fusion.py  practical_example.py  public_model_demo.py  real_prithvi_demo_new.py  real_prithvi_demo_old.py  simple_prithvi_demo.py  test_corrected_encoder.py  test_encoder_extractor.py  test_encoder_extractor_new.py  test_encoder_extractor_old.py  test_fusion.py
multimodal/core/: __init__.py  climate_text_fusion.py  location_aware.py  location_aware_fusion.py
multimodal/dataset/: README.md  config.py  data_loader.py  merra2_dataset_processor.py  requirements.txt
multimodal/dataset/examples/: basic_usage.py  batch_processing.py  integration_test.py
multimodal/docs/: README.md  REAL_WEIGHTS_SUCCESS.md
multimodal/docs/architecture/: README.md  create_architecture_diagram.py  create_attention_detail.py
multimodal/examples/: README.md
multimodal/examples/advanced/: complete_real_weights_demo.py  fusion_demo.py  public_model_demo.py  real_prithvi_demo.py  working_demo.py
multimodal/examples/basic/: example_usage.py  practical_example.py  simple_prithvi_demo.py
multimodal/examples/location_aware/: final_location_aware_fusion.py  location_aware_example.py
multimodal/tests/: README.md  test_corrected_encoder_new.py  test_corrected_encoder_old.py  test_encoder_extractor.py  test_fusion.py  test_location_aware.py
multimodal/tests/demos/: working_location_demo.py
multimodal/tests/integration/: debug_forward_pass.py  debug_weight_loading.py  test_encoder_loading_verification.py  test_encoder_only.py  test_full_encoder_pipeline.py  test_llama_comprehensive.py  test_llama_integration.py  test_llama_with_prithvi.py  test_mps_fix.py  test_simple_encoder_extraction.py
multimodal/tests/system/: verify_setup.py
multimodal/training/: README.md  TRAINING_TEST_RESULTS.md  config.yaml  deepspeed_config.json  inference.py  launch.sh  prepare_data.py  requirements-training.txt  setup_env.sh  train_multimodal.py
multimodal/training/examples/: README.md  llama3_cross_attention.py  llama3_final_success.py  llama3_working.py  mini_training_demo.py  multi_year_trend_analysis.py  spatial_comparative_analysis.py  test_cpu_large_model.py  test_full_model.py  test_large_simple.py  (+5 more)
multimodal/utils/: ENCODER_FILES_EXPLANATION.md  README.md  __init__.py  correct_extraction.py  corrected_encoder.py  encoder_extractor.py  final_location_aware_fusion_new.py  public_model_demo_old.py  requirements-geo.txt
multimodal/validation/: config.py  config.yaml  get_assets.py  loss.py  reproducibility.py  validate_prithvi_wxc.py
multimodal_aifs/: README.md  TESTS_AND_EXAMPLES_SUMMARY.md  __init__.py  aifs_wrapper.py  conftest.py  constants.py  requirements-aifs.txt
multimodal_aifs/analysis/: aifs_checkpoint_analysis.md  aifs_detailed_analysis.py  aifs_model_summary.py  analyze_aifs_processor.py  explain_aifs_processor.py  inspect_aifs_checkpoint.py  processor_analysis.json
multimodal_aifs/core/: __init__.py  aifs_climate_fusion.py  aifs_encoder_utils.py  aifs_location_aware.py  aifs_location_aware_fusion.py
multimodal_aifs/data/: README.md
multimodal_aifs/docs/: zarr_integration_guide.md
multimodal_aifs/examples/: README.md  aifs_integration_example.py  aifs_llama_example.py  multimodal_timeseries_demo.py  zarr_aifs_multimodal_example.py
multimodal_aifs/scripts/: check_encoder_signature.py  extract_aifs_encoder.py
multimodal_aifs/tests/: README.md  TIME_SERIES_TEST_SUMMARY.md  run_time_series_tests.py
multimodal_aifs/training/: README.md  config.yaml  inference.py  prepare_data.py  requirements.txt  train_multimodal.py
multimodal_aifs/utils/: __init__.py  aifs_encoder_utils.py  aifs_time_series_tokenizer.py  climate_data_utils.py  location_utils.py  text_utils.py  zarr_data_loader.py
scripts/: code-quality-check.sh  create_test_zarr.py
tests/: README.md
tests/demos/: README.md
tests/integration/: README.md  debug_forward_pass.py  debug_weight_loading.py  test_encoder_loading_verification.py  test_encoder_only.py  test_full_encoder_pipeline.py  test_llama_comprehensive.py  test_llama_integration.py  test_llama_with_prithvi.py  test_simple_encoder_extraction.py
tests/system/: README.md  verify_setup.py
(+61 files in other folders)
